[package]
name = "csvr"
version = "0.1.1"
edition = "2021"
author = "Srv-Rits"
description = "A cli tool to parse and manipulate csv files"
repository = "https://github.com/0xsouravm/csvr"
license = "MIT"
keywords = ["csv", "cli"]
categories = ["command-line-utilities"]
exclude = ["./mycsv.csv", "./yourcsv.csv"]
readme = "./README.md"
